--- a/main.html
+++ b/main.html
@@ -5,9 +5,27 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+  
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>roll number</th>
+				<th>name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Joy</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Ajoy</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
